force-app/main/default/objects/LogDeIntegracao__c/LogDeIntegracao__c.object-meta.xml
<CustomObject>
    <description>Este objeto será utilizado para armazenar informações relacionadas a falhas e sucessos nas chamadas de APIs.</description>
    <label>Log De Integração</label>
    <nameField>
        <label>Log De Integração Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logs De Integrações</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>