force-app/main/default/objects/LogDeIntegracao__c/fields/APIName__c.field-meta.xml
<CustomField>
    <fullName>APIName__c</fullName>
    <description>Nome da API que está sendo chamada.</description>
    <inlineHelpText>Exemplo: &quot;ListaEspelhoDeVendas&quot;.</inlineHelpText>
    <label>API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>