force-app/main/default/objects/LogDeIntegracao__c/fields/EndpointURL__c.field-meta.xml
<CustomField>
    <fullName>EndpointURL__c</fullName>
    <description>URL do endpoint da API.</description>
    <inlineHelpText>Exemplo: &quot;http://www.civilweb.com.br/ListaEspelhoDeVendas&quot;.</inlineHelpText>
    <label>Endpoint URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>