force-app/main/default/objects/LogDeIntegracao__c/fields/ExceptionMessage__c.field-meta.xml
<CustomField>
    <fullName>ExceptionMessage__c</fullName>
    <description>Mensagem de erro gerada durante a chamada da API (caso aplicável).</description>
    <inlineHelpText>Exemplo: &quot;Timeout ao conectar no endpoint.&quot;</inlineHelpText>
    <label>Exception Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>