force-app/main/default/objects/LogDeIntegracao__c/fields/LogTimestamp__c.field-meta.xml
<CustomField>
    <fullName>LogTimestamp__c</fullName>
    <description>Data e hora do evento de log.</description>
    <inlineHelpText>Exemplo: &quot;2025-01-08 12:00:00&quot;.</inlineHelpText>
    <label>Log Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>