force-app/main/default/objects/LogDeIntegracao__c/fields/RequestBody__c.field-meta.xml
<CustomField>
    <fullName>RequestBody__c</fullName>
    <description>Corpo da requisição enviada à API.</description>
    <inlineHelpText>Exemplo: XML ou JSON enviado.</inlineHelpText>
    <label>Request Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>