force-app/main/default/objects/LogDeIntegracao__c/fields/ResponseBody__c.field-meta.xml
<CustomField>
    <fullName>ResponseBody__c</fullName>
    <description>Corpo da resposta recebida da API (caso aplicável).</description>
    <inlineHelpText>Exemplo: XML ou JSON de resposta.</inlineHelpText>
    <label>Response Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>