force-app/main/default/objects/LogDeIntegracao__c/fields/StackTrace__c.field-meta.xml
<CustomField>
    <fullName>StackTrace__c</fullName>
    <description>Detalhes do rastreamento de pilha gerado no erro (caso aplicável).</description>
    <inlineHelpText>Exemplo: &quot;Linha 35: Connection Timeout...&quot;</inlineHelpText>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>