force-app/main/default/objects/LogDeIntegracao__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Indica se a chamada da API foi bem-sucedida ou não.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sucesso</fullName>
            </value>
            <value>
                <fullName>Erro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>