force-app/main/default/objects/LogDeIntegracao__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>APIName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ExceptionMessage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>